# spoletum.net

./: .terraform.lock.hcl  README.md  ansible.cfg  main.tf  outputs.tf  pyproject.toml  requirements.txt  variables.tf
.github/workflows/: ansible-nonprod.yml  development.yml  main.yml  terraform-nonprod.yml  terraform.yml  tf.yml
ansible/: ansible.cfg  inventory.yml  iventory.ini  iventory.yml  main.yml  playbook.yml
ansible/inventories/: nonprod.yml
ansible/inventories/nonprod/: hosts.yml
ansible/inventory/: dev.yml
ansible/playbooks/: kubernetes.yml  main.yml
ansible/playbooks/pilum/: hetzner.yml  k0s.yml
ansible/roles/microk8s/: main.yml
argocd/charts/camel-karavan/: Chart.yaml
argocd/charts/karavan/: values.yaml
argocd/clusters/development/: README.md  argocd-values.yml  boot.sh  letsencrypt.yml
inventories/elysium/dev/: inventory.yml
packer/: k0s.pkr.hcl  microk8s.hcl2
playbooks/: hetzner.yml
playbooks/elysium/: k0s.yml
playbooks/elysium/dev/: infra.yaml  infra.yml  k0s.yml  main.yml
playbooks/templates/: inventory.ini.j2
roles/fluxcd/tasks/: main.yaml
roles/k0s-controller/tasks/: main.yml
roles/k0s/handlers/: main.yml
roles/k0s/tasks/: main.yml
roles/k0s_controller/handlers/: main.yml
roles/k0s_controller/tasks/: main.yml
templates/: inventory.tpl
terraform/: README.md  main.tf  outputs.tf  variables.tf
terraform/development/: main.tf  microk8s.yml  variables.tf
terraform/pilum/: .terraform.lock.hcl  controller.yml  main.tf  variables.tf
terraform/templates/: cloud-init.tpl  inventory.tpl
(+73 files in other folders)
